--- a/reveda.conf
+++ b/reveda.conf
@@ -1,6 +1,6 @@
 {
-    "textEditorPath": "/usr/bin/kwrite",
-    "simulationPath": "/home/eskiyerli/OneDrive_reveda/Projects/RevEDA/testbenches",
+    "textEditorPath": "C:\\Program Files\\Microsoft VS Code\\Code.exe",
+    "simulationPath": "C:\\Users\\eskiy\\OneDrive - Revolution Semiconductor\\Projects\\RevEDA\\testbenches",
     "switchViewList": [
         "schematic",
         "spice",
